@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="ru.wapstart.plus1.bart"
-		android:versionCode="6"
-		android:versionName="2.1.0">
+		android:versionCode="7"
+		android:versionName="2.1.1">
 	<uses-sdk android:minSdkVersion="7" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
