@@ -1,3 +1,10 @@
+Plus1 WapStart Android SDK 2.1.1, 2012-08-29
+----------------------
+- Fixed NPE in post-action body of banner animation context
+- Fixed code using WebView pauseTimers/resumeTimers methods
+- Release audio player when pause BartActivity
+- Fix typo in Cookie header
+
 Plus1 WapStart Android SDK 2.1.0, 2012-08-06
 ----------------------
 - Added html5 play video feature
